--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,21 @@
 {
     "name": "tolkam/throwable-handler",
-    "description": "Allows to convert php errors to exceptions and handle them consistently",
+    "description": "Error handler that converts php errors to exceptions and handles them consistently",
     "type": "library",
     "license": "proprietary",
+    "authors": [
+        {
+            "name": "Kanstantsin Kulesh",
+            "email": "kk@tolkam.com",
+            "homepage": "https://www.tolkam.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Tolkam\\ThrowableHandler\\": "src/"
         }
     },
     "require": {
-        "php": ">=7.2"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+        "php": ">=7.0"
     }
 }
